fixed "x" visible in desktop mode

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@
     display: none;
 }
 
+.fa-solid.fa-xmark {
+    display: none;
+}
+
 .header {
     width: 80%;
     max-width: 700px;
@@ -120,6 +124,7 @@ img {
     }
 
     nav .fa-solid.fa-xmark{
+        display: block;
         color: white;
         position: absolute;
         right: 0;
@@ -315,7 +320,6 @@ h3{
     margin: auto;
     margin-top: 20px;
     min-height: 300px;
-    max-height: 400px;
     width: 90vw;
     max-width: 1200px;
     background: rgba(255,255,255,0.9);
